--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3.1'
+version: "3.1"
 
 services:
-
   wordpress:
     build:
       context: ./
@@ -13,10 +12,10 @@ services:
       WORDPRESS_DB_USER: exampleuser
       WORDPRESS_DB_PASSWORD: examplepass
       WORDPRESS_DB_NAME: exampledb
+      WORDPRESS_DEBUG: "true"
     volumes:
-      - wordpress:/var/www/html
       - ./wp-content/themes/custom:/var/www/html/wp-content/themes/custom
-
+      - ./wp-content/plugins/custom:/var/www/html/wp-content/plugins/custom
   db:
     image: mysql:5.7
     restart: always
@@ -24,7 +23,7 @@ services:
       MYSQL_DATABASE: exampledb
       MYSQL_USER: exampleuser
       MYSQL_PASSWORD: examplepass
-      MYSQL_RANDOM_ROOT_PASSWORD: '1'
+      MYSQL_RANDOM_ROOT_PASSWORD: "1"
     volumes:
       - db:/var/lib/mysql
 
