--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,7 @@ services:
       WORDPRESS_DB_NAME: exampledb
       WORDPRESS_DEBUG: "true"
     volumes:
-      - ./wp-content/themes/custom:/var/www/html/wp-content/themes/custom
-      - ./wp-content/plugins/custom:/var/www/html/wp-content/plugins/custom
+      - ./:/var/www/html
   db:
     image: mysql:5.7
     restart: always
