--- a/wp-content/themes/custom/composer.json
+++ b/wp-content/themes/custom/composer.json
@@ -9,7 +9,8 @@
     }
   ],
   "require": {
-    "jjgrainger/posttypes": "^2.1"
+    "jjgrainger/posttypes": "^2.1",
+    "dennykuo/laravel-config-standalone": "^1.3"
   },
   "autoload": {
     "psr-4": {
